VM crash due to "Base pointers must match"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b120

      The failure is triggered when the TestOptionsWithRanges test creates a VM instance with -XX:AllocatePrefetchStepSize=1. The failure appeared on solaris once, I was not able to reproduce it so far. Here is the output:

      STDERR:
      TEST FAILED: Error processing option AllocatePrefetchStepSize with valid value '-server -XX:+UseG1GC -XX:AllocatePrefetchStepSize=1'! JVM output reports a fatal error. JVM exited with code 6!
      stdout content[# To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/compile.cpp:2838
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/jprt/T/P1/093429.zmajo/s/hotspot/src/share/vm/opto/compile.cpp:2838), pid=22724, tid=35
      # assert(!addp->is_AddP() || addp->in(AddPNode::Base)->is_top() || addp->in(AddPNode::Base) == n->in(AddPNode::Base)) failed: Base pointers must match
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0) (fastdebug build 9-internal+0-2016-04-21-093429.zmajo.8153340)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 9-internal+0-2016-04-21-093429.zmajo.8153340, mixed mode, tiered, compressed oops, g1 gc, solaris-sparc)
      # Core dump will be written. Default location: /opt/jprt/T/T1/093429.zmajo/s/hotspot/build/solaris-sparc/testoutput/hotspot_fast_runtime/JTwork/scratch/core or core.22724
      #
      # An error report file with more information is saved as:
      # /opt/jprt/T/T1/093429.zmajo/s/hotspot/build/solaris-sparc/testoutput/hotspot_fast_runtime/JTwork/scratch/hs_err_pid22724.log
      [thread 34 also had an error]
      [thread 33 also had an error]
      Java start-up!
      #
      # Compiler replay data is saved as:
      # /opt/jprt/T/T1/093429.zmajo/s/hotspot/build/solaris-sparc/testoutput/hotspot_fast_runtime/JTwork/scratch/replay_pid22724.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      Current thread is 35
      Dumping core ...
      ]

            Assignee:
            Martin Doerr
            Reporter:
            Zoltan Majo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: