8154836: VM crash due to "Base pointers must match"

Improve the handling of AddP nodes in final graph reshaping.

Reviewed-by: kvn, zmajo